--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kubrafarokhi.github.io/monsters-rolodex-complete/",
+  "homepage": "https://kubrafarokhi.github.io/monsters-rolodex/",
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
